<resources>
    <string name="app_name">Lantern</string>
    <string name="home">Home</string>
    <string name="songs">Songs</string>
    <string name="albums">Albums</string>
    <string name="artists">Artists</string>
    <string name="action_settings">Settings</string>
    <string name="extra_menu">Extra</string>
    <string name="about">About</string>
    <string name="currently_playing">Currently Playing</string>
</resources>
